fix(css): dark mode primary

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -14,7 +14,7 @@
   --ifm-color-primary-lightest: #fff;
   --ifm-color-primary-lighter: #fff;
   --ifm-color-primary-light: #feffff;
-  --ifm-color-primary: #657cdf;
+  --ifm-color-primary: #a2aeec;
   --ifm-color-primary-dark: #657cdf;
   --ifm-color-primary-darker: #657cdf;
   --ifm-color-primary-darkest: #657cdf;
